Add tests for custom users

--- a/samples/IdentitySample.DefaultUI/Views/Shared/_Layout.cshtml
+++ b/samples/IdentitySample.DefaultUI/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-page="/About">About</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
