Guard against feature not being there

--- a/src/UI/Areas/Identity/Pages/V3/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/src/UI/Areas/Identity/Pages/V3/Account/Manage/TwoFactorAuthentication.cshtml
@@ -8,7 +8,8 @@
 
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <h4>@ViewData["Title"]</h4>
-@if (HttpContext.Features.Get<ITrackingConsentFeature>().CanTrack)
+var consentFeature = HttpContext.Features.Get<ITrackingConsentFeature>();
+@if (consentFeature?.CanTrack ?? true)
 {
     @if (Model.Is2faEnabled)
     {
